Bug 283767 - 'Image needs to be saved' notification after editing and saving manually an image
Summary: 'Image needs to be saved' notification after editing and saving manually an i...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Showfoto-Save (other bugs)
Version First Reported In: 2.2.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-11 08:48 UTC by Pal Körössy
Modified: 2022-02-05 05:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pal Körössy 2011-10-11 08:48:22 UTC
Version:           2.2.0 (using KDE 4.7.1) 
OS:                Linux

If I edit and save the image, closing it I get the notification:
'The image has been modified. Do you want to save it?'
It's nonsense because it has been already saved.
I realise after clicking the 'Save' button on the toolbar, the button remains active, the file size on the left info panel becomes larger after every saving attempt.
Normally if I open an image (and it is unchanged), the 'Save' button in the toolbar is inactive, saving the file is not available (because it is unchanged).

Reproducible: Always

Steps to Reproduce:
1. Edit an image (e.g. aspect ratio crop).
2. Save the image clicking on the 'Save' button on the Toolbar.
3. Close the image.

Actual Results:  
A notification pops up:
'The image has been modified. Do you want to save it?'

Expected Results:  
The file should be closed without any notification.
Comment 1 caulier.gilles 2011-10-11 09:33:44 UTC
I think that it have been fixed recently by marcel for 2.3.0 release. Look this entry :

https://bugs.kde.org/show_bug.cgi?id=282880

Gilles Caulier
Comment 2 Pal Körössy 2011-10-13 19:18:10 UTC
(In reply to comment #1)
> I think that it have been fixed recently by marcel for 2.3.0 release. Look this
> entry :
> 
> https://bugs.kde.org/show_bug.cgi?id=282880

I think that's a different issue. My bug is about an extra, unnneccessary  notification before closing a modified and saved image.
On the other hand the bug I've found in Showfoto cannot be reproduced in Digikam's Editor.
Comment 3 Marcel Wiesweg 2011-11-02 21:55:34 UTC
Git commit 6a8e31cc5993b82e14845faadc4eab2b6e04d3f9 by Marcel Wiesweg.
Committed on 01/11/2011 at 19:06.
Pushed by mwiesweg into branch 'master'.

Carry out the same steps regarding switching history origin  "save" as with "saveAs"

We calculate the "hasChanges" property, and enabling of the Save button, depending
on the image's original history and current history. In addition, some more complex
history editing is involved.

BUG: 283767

M  +2    -0    showfoto/main/showfoto.cpp
M  +0    -10   utilities/imageeditor/canvas/canvas.cpp
M  +0    -2    utilities/imageeditor/canvas/canvas.h
M  +3    -1    utilities/imageeditor/editor/editorwindow.cpp

http://commits.kde.org/digikam/6a8e31cc5993b82e14845faadc4eab2b6e04d3f9