Carry out the same steps regarding switching history origin  "save" as with "saveAs"

We calculate the "hasChanges" property, and enabling of the Save button, depending
on the image's original history and current history. In addition, some more complex
history editing is involved.

BUG: 283767